chimera_red/firmware_idf/build_log.txt
Processing esp32s3-idf (platform: espressif32; board: esp32-s3-devkitc-1; framework: espidf)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.12.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-espidf @ 3.50500.0 (5.5.0) 
 - tool-cmake @ 3.30.2 
 - tool-esp-rom-elfs @ 0.0.1+20241011 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - tool-idf @ 1.0.1 
 - tool-mconf @ 1.4060000.20190628 (406.0.0) 
 - tool-ninja @ 1.9.0 
 - tool-riscv32-esp-elf-gdb @ 11.2.0+20220823 
 - tool-xtensa-esp-elf-gdb @ 11.2.0+20230208 
 - toolchain-esp32ulp @ 1.23800.240113 (2.38.0) 
 - toolchain-riscv32-esp @ 14.2.0+20241119 
 - toolchain-xtensa-esp-elf @ 14.2.0+20241119
Reading CMake configuration...
Warning! Flash memory size mismatch detected. Expected 8MB, found 16MB!
Please select a proper value in your `sdkconfig.defaults` or via the `menuconfig` target!
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 0 compatible libraries
Scanning dependencies...
No dependencies
Building in release mode
Compiling .pio\build\esp32s3-idf\main\main.c.o
main/main.c: In function 'cmd_get_info':
main/main.c:198:12: error: format '%u' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
  198 |            "{\"type\":\"sys_info\",\"chip\":\"ESP32-S3\",\"version\":\"%s\","
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
......
  201 |            FIRMWARE_VERSION, free_heap, total_heap, psram,
      |                              ~~~~~~~~~
      |                              |
      |                              uint32_t {aka long unsigned int}
main/main.c:199:28: note: format string is defined here
  199 |            "\"free_heap\":%u,\"total_heap\":%u,\"psram\":%u,"
      |                           ~^
      |                            |
      |                            unsigned int
      |                           %lu
main/main.c:198:12: error: format '%u' expects argument of type 'unsigned int', but argument 6 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
  198 |            "{\"type\":\"sys_info\",\"chip\":\"ESP32-S3\",\"version\":\"%s\","
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
......
  201 |            FIRMWARE_VERSION, free_heap, total_heap, psram,
      |                                         ~~~~~~~~~~
      |                                         |
      |                                         uint32_t {aka long unsigned int}
main/main.c:199:46: note: format string is defined here
  199 |            "\"free_heap\":%u,\"total_heap\":%u,\"psram\":%u,"
      |                                             ~^
      |                                              |
      |                                              unsigned int
      |                                             %lu
main/main.c:198:12: error: format '%u' expects argument of type 'unsigned int', but argument 7 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
  198 |            "{\"type\":\"sys_info\",\"chip\":\"ESP32-S3\",\"version\":\"%s\","
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
......
  201 |            FIRMWARE_VERSION, free_heap, total_heap, psram,
      |                                                     ~~~~~
      |                                                     |
      |                                                     uint32_t {aka long unsigned int}
main/main.c:199:59: note: format string is defined here
  199 |            "\"free_heap\":%u,\"total_heap\":%u,\"psram\":%u,"
      |                                                          ~^
      |                                                           |
      |                                                           unsigned int
      |                                                          %lu
cc1.exe: some warnings being treated as errors
*** [.pio\build\esp32s3-idf\main\main.c.o] Error 1
========================= [FAILED] Took 12.87 seconds =========================
